:sparkles: add new space

--- a/.github/workflows/sync_to_hub.yml
+++ b/.github/workflows/sync_to_hub.yml
@@ -49,3 +49,14 @@ jobs:
       subdirectory: spaces/hello-world-streamlit
     secrets:
       hf_token: ${{ secrets.HF_TOKEN }}
+
+   sync_space_stable_diffusion_music_videos:
+    uses: nateraw/huggingface-sync-action/.github/workflows/sync_with_hf_hub.yml@main
+    with:
+      github_repo_id: nateraw/my-huggingface-repos
+      huggingface_repo_id: nateraw/stable-diffusion-music-videos
+      repo_type: space
+      space_sdk: streamlit
+      subdirectory: spaces/stable-diffusion-music-videos
+    secrets:
+      hf_token: ${{ secrets.HF_TOKEN }}
